# LOOP-Evals

./: .gitignore  README.md  analysis.py  analysis_wg.py  analysis_wordle.py  charts.py  info.json  pyproject.toml  requirements.txt  results_all.json  sudoku.py  sudokusolve.py  wordgrid.py  wordle.py
llms/: gpt.py  llms.py
puzzles/: sudokugen.py  wordle.txt
results/: results_wg.json  results_wordle.json
utils/: retry.py
