[tool.poetry]
name = "loop-evals"
version = "0.1.0"
description = "Logical Operations On Puzzles: Simple Iterative Reasoning Tests for LLMs first through wordgrids"
authors = ["Rohit <rohit.krishnan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
enchant = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
